# oresults-connector

./: .gitignore  .prettierrc  Cargo.toml  LICENSE.md  README.md  index.html  package.json
.github/workflows/: release.yml
src/: App.tsx  index.css  index.tsx  main.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: changes_watcher.rs  cmd.rs  file_utils.rs  main.rs
